--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ p {
 	margin: 0;
 	font-size:14px;
 }
-img{	border:none;max-width:100%; height:auto;}
+img{	border:none;max-width:100%; height:500%;}
 ul{
 	padding: 0;
     margin: 0;
